@@ -1,3 +1,9 @@
+Next release
+============
+
+- Backport bug fix from master: Explicit url dispatch regexes can now contain
+  colons.  https://github.com/Pylons/pyramid/issues/629
+
 1.3.2 (2012-05-19)
 ==================
 
